<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/largeImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="#333333"
            android:contentDescription="@string/imagedesc" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#f3f3f3" >
        </View>

        <LinearLayout
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:background="#333333"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/mediumImageView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="0.55"
                android:contentDescription="@string/imagedesc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f3f3f3" >
            </View>

            <ImageView
                android:id="@+id/smallImageView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_weight="0.31"
                android:contentDescription="@string/imagedesc" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#333333" >
        </View>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/imagedesc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#333333" >
            </View>

            <TextView
                android:id="@+id/fullNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/full_name" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#333333" >
            </View>

            <TextView
                android:id="@+id/memberSinceNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/created_on" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#333333" >
            </View>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#333333" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hashtagHeadTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hash_tag_header"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333333" >
        </View>

        <TextView
            android:id="@+id/hash_tagTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/hash_tag_content"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>